<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusableInTouchMode="true"
        android:clickable="false">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_button"
                android:id="@+id/build_button"
                android:onClick="onClick"
                style="@android:style/Theme.Holo"
                />
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_button"
                android:id="@+id/sort_button"
                android:onClick="onClick"
                style="@android:style/Theme.Holo"
                />
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/validate_button"
                android:id="@+id/validate_button"
                android:onClick="onClick"
                style="@android:style/Theme.Holo"
                />
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button"
                android:onClick="onClick"
                android:id="@+id/settings_button"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                style="@android:style/Theme.Holo"
                />
    </LinearLayout>
</FrameLayout>